force-app/main/default/objects/DHS_Workload__c/fields/Investigator_Name__c.field-meta.xml
<CustomField>
    <fullName>Investigator_Name__c</fullName>
    <formula>DHS_User__r.FirstName +&apos; &apos;+ DHS_User__r.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Investigator Name</label>
    <type>Text</type>
</CustomField>