force-app/main/default/objects/DHS_Workload__c/fields/Items_In_Progress__c.field-meta.xml
<CustomField>
    <fullName>Items_In_Progress__c</fullName>
    <label>Items In-Progress</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>