force-app/main/default/objects/DHS_Workload__c/fields/Items_QA_Rejected__c.field-meta.xml
<CustomField>
    <fullName>Items_QA_Rejected__c</fullName>
    <label>Items QA Rejected</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>