force-app/main/default/objects/DHS_Workload__c/fields/Type_of_Assignee__c.field-meta.xml
<CustomField>
    <fullName>Type_of_Assignee__c</fullName>
    <label>Type of Assignee</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>INV</fullName>
            </value>
            <value>
                <fullName>CMO</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>