force-app/main/default/objects/DHS_Workload__c/listViews/DHS_All.listView-meta.xml
<ListView>
    <fullName>DHS_All</fullName>
    <columns>NAME</columns>
    <columns>Items_Assigned_Not_Accepted__c</columns>
    <columns>Items_In_Progress__c</columns>
    <columns>ESI_Items_In_Progress__c</columns>
    <columns>Items_QA_Rejected__c</columns>
    <columns>DHS_User__c</columns>
    <filterScope>Everything</filterScope>
    <label>DHS_All</label>
</ListView>